# freestanding_mersenne_twister

./: CMakeLists.txt  README.md
include/: freestanding_mersenne_twister.h
test/: CMakeLists.txt  config.h  constant_values.cpp  copy.cpp  equality.cpp  initial_sequence.cpp
